--- a/Wpf_core_diploma/Window/pgAddChang.xaml
+++ b/Wpf_core_diploma/Window/pgAddChang.xaml
@@ -1,15 +1,16 @@
-﻿<Page x:Class="DIPloma.Pages.pgLvStudent"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:DIPloma.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="720" d:DesignWidth="1030"
-      Title="pgLvStudent"
-      Style="{StaticResource font}"
-      >
-    <Page.Resources>
+﻿<Window x:Class="DIPloma.Window.pgAddChang"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:DIPloma.Window"
+        mc:Ignorable="d"
+        Height="500" Width="200" MinHeight="500" MinWidth="200"
+        Background="#7C7C7C"
+        IsVisibleChanged="IsVisibleChanged1"
+        >
+
+    <Window.Resources>
         <Style x:Key="CalendarStyle1" TargetType="{x:Type Calendar}">
             <Setter Property="Foreground" Value="#022D73"/>
             <Setter Property="Background" Value="Transparent">
@@ -190,205 +191,64 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Page.Resources>
+    </Window.Resources>
 
-    <Grid>
-        <Grid.Effect>
-            <DropShadowEffect BlurRadius="30" ShadowDepth="1" Opacity="0.4"/>
-        </Grid.Effect>
+    <Grid Grid.Row="1" Grid.Column="1" >
 
 
-
-
-
-        <Border 
-                CornerRadius="7" ClipToBounds="True">
+        <Border CornerRadius="7" Margin="5">
             <Border.Background>
-                <SolidColorBrush Opacity="0.5" Color="#7C7C7C"/>
+                <SolidColorBrush Color="#D9D9D9" Opacity="1"/>
             </Border.Background>
             <Grid Background="Transparent">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="255"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <!--left -->
-                <Border Grid.Column="0" CornerRadius="7" Margin="5" ClipToBounds="True" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="219*"/>
+                    <RowDefinition Height="445*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Calendar  x:Name="calendar1" FirstDayOfWeek="Monday" 
+                               DisplayDate="{Binding Date}" SelectedDate="{Binding Date}"        
+                               CalendarItemStyle="{DynamicResource CalendarCalendarItemStyle1}" Style="{DynamicResource CalendarStyle1}"/>
+                </Grid>
+                <Grid Grid.Row="1">
 
-                    <Border.Background>
-                        <SolidColorBrush Opacity="1" Color="#D9D9D9"/>
-                    </Border.Background>
+                    <StackPanel  VerticalAlignment="Center" Margin="5">
+                        <StackPanel>
 
-                    <Grid Background="Transparent">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="65"/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
+                            <TextBlock Text="Комментарий к оценки" TextWrapping="Wrap" 
+                                                           Foreground="#022D73" FontSize="16" Margin="5 0 0 5"/>
 
-                        <StackPanel Grid.Row="0" HorizontalAlignment="Center" Width="222">
-                            <TextBlock Text="Список учащихся 11 ”А”" FontSize="16" 
-                               HorizontalAlignment="Left" Margin="0 5 0 0"/>
-                            <Border CornerRadius="14" Height="25" Width="221" Margin="0 11 0 0">
+                            <Border CornerRadius="15">
                                 <Border.Background>
-                                    <SolidColorBrush Color="#656565" Opacity="1"/>
+                                    <SolidColorBrush Color="#FFFFFF"/>
                                 </Border.Background>
-                                <StackPanel VerticalAlignment="Center">
-                                    <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
-                                        <TextBlock Text="Поиск" Margin="14 0 0 0" 
-                                           FontSize="14" Foreground="#FFFFFF"/>
-                                        <TextBox x:Name="tbSerchStudent"
-                                            FontSize="14" Background="Transparent" TextChanged="tChangedSerchStuden"
-                                         BorderBrush="Transparent"
-                                         Style="{StaticResource tboxTransperent}" Width="155"
-                                         Foreground="#FFFFFF" Margin="3 0 0 0">
-
-                                        </TextBox>
-                                    </StackPanel>
-                                </StackPanel>
+                                <TextBox x:Name="tbComment" Text="{Binding Comment}" FontSize="16" Height="30" 
+                                                             Background="Transparent" BorderBrush="Transparent"/>
                             </Border>
                         </StackPanel>
-                        <ListView x:Name="lvStudentLeft" Grid.Row="1" Background="Transparent"
-                                  SelectionChanged="scStudent" BorderBrush="Transparent"
-                                  >
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Border CornerRadius="14" Height="25" Width="210" Margin="0 2 2 0" HorizontalAlignment="Center">
-                                        <Border.Background>
-                                            <SolidColorBrush Color="#022D73" Opacity="1"/>
-                                        </Border.Background>
 
-                                        <TextBlock  Text="{Binding SurnameStudent}" 
-                                                    VerticalAlignment="Center" Margin="11 0 0 0"
-                                                    Foreground="#FFFFFF"
-                                                    FontSize="14"/>
+                        <StackPanel>
+                            <TextBlock Text="Оценка" Margin="5 10 0 5 " FontSize="16"  Foreground="#022D73"/>
+                            <Border CornerRadius="15">
+                                <Border.Background>
+                                    <SolidColorBrush Color="#FFFFFF"/>
+                                </Border.Background>
+                                <TextBox x:Name="tbAestiomatio" Text="{Binding Aestimatio}" FontSize="16" Height="30" 
+                                                                 Background="Transparent" BorderBrush="Transparent" />
+                            </Border>
 
-                                    </Border>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </Grid>
-
-
-
-
-                </Border>
-                <Grid Grid.Column="1">
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="46"/>
-                        <RowDefinition Height="79*"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="220"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Grid.Row="0" Grid.Column="0">
-                        <Border Grid.Column="1" MouseUp="muSerch2" CornerRadius="7" Margin="5,5,5,5" ClipToBounds="True" >
-                            <Border.Background>
-                                <SolidColorBrush Opacity="1" Color="#D9D9D9"/>
-                            </Border.Background>
-                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5 0 0 0">
-                                <Grid Width="30">
-
-
-
-                                    <Button BorderBrush="Transparent" Click="clUpdate">
-                                        <Button.Background>
-                                            <ImageBrush ImageSource="/Resources/Update1.png"/>
-
-                                        </Button.Background>
-                                    </Button>
-
-                                </Grid>
-                                <TextBlock Text="Поиск" MouseUp="muSerch" Margin="5 0 0 0" />
-                                <TextBox x:Name="tboxSerch" Background="Transparent" 
-                                     BorderBrush="Transparent" Width="5000" ClipToBounds="True" 
-                                     FontSize="20" Style="{StaticResource tboxTransperent}" VerticalAlignment="Center">
-
-                                </TextBox>
-
-                            </StackPanel>
-                        </Border>
-                    </Grid>
-                    <Grid Grid.Row="0" Grid.Column="1">
-                        <Button Style="{StaticResource Button1}" Content="+ оценка" Foreground="#FFFFFF"
-                                Margin="5" Click="clAddEstimation">
+                        </StackPanel>
+                        <Button Content="Сохранить" Margin="5 10 5 5" Style="{StaticResource Button1}" Height="30" 
+                                                        Foreground="#FFFFFF" Click="clSaveAddChang">
                             <Button.Resources>
                                 <Style TargetType="Border">
                                     <Setter Property="CornerRadius" Value="14"/>
                                 </Style>
                             </Button.Resources>
                         </Button>
-                    </Grid>
-                    <Grid Grid.Row="1" Grid.Column="0">
-
-                        <ListView Name="lvMain" Background="Transparent" BorderBrush="Transparent">
-
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="430"/>
-                                            <ColumnDefinition Width="70"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <Border Grid.Column="0" CornerRadius="15" VerticalAlignment="Center" Height="26" Margin="0 2 0 0" >
-                                            <Border.Background>
-                                                <SolidColorBrush Color="#FFFFFF" Opacity="1"/>
-                                            </Border.Background>
-
-                                            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
-                                                <TextBlock Margin="15 0 0 0" Text="{Binding Comment}" FontSize="16"/>
-                                                <TextBlock Margin="5 0 0 0" Text="{Binding Aestimatio}" FontSize="16" />
-                                            </StackPanel>
-                                        </Border>
-
-                                        <Border Grid.Column="1" HorizontalAlignment="Center" >
-                                            <Border.Background>
-                                                <SolidColorBrush Color="#FFFFFF" Opacity="0"/>
-                                            </Border.Background>
-                                            <StackPanel Orientation="Horizontal">
-                                                <Button Width="30" Height="30" BorderBrush="Transparent" Click="clChang" Style="{DynamicResource Button1}">
-                                                    <Button.Background>
-
-                                                        <ImageBrush ImageSource="/Resources/pngwing.com.png" />
-                                                    </Button.Background>
-
-
-                                                </Button>
-
-                                                <Button Width="30" Height="30" BorderBrush="Transparent" Click="clDel" Style="{DynamicResource Button1}">
-                                                    <Button.Background>
-                                                        <ImageBrush ImageSource="/Resources/delete.png" />
-                                                    </Button.Background>
-
-
-                                                </Button>
-                                            </StackPanel>
-                                        </Border>
-                                    </Grid>
-
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-
-                            <ListView.GroupStyle>
-                                <GroupStyle>
-                                    <GroupStyle.HeaderTemplate>
-                                        <DataTemplate>
-                                            <Border CornerRadius="7" Background="#D9D9D9" Margin="10 10 0 10" Height="26">
-                                                <TextBlock  FontSize="20" Margin="15 0 0 0" Foreground="#022D73" Height="50"
-                                                            Text="{Binding Name, StringFormat= D, ConverterCulture='ru-RU'}" />
-                                            </Border>
-                                        </DataTemplate>
-                                    </GroupStyle.HeaderTemplate>
-                                </GroupStyle>
-                            </ListView.GroupStyle>
-                        </ListView>
-                    </Grid>
+                    </StackPanel>
                 </Grid>
             </Grid>
         </Border>
     </Grid>
-</Page>
-
+</Window>
